Update to spring boot 3.0.0